--- a/trial01/my-farm-01/src/app/pages/farm-data/farm-data.page.html
+++ b/trial01/my-farm-01/src/app/pages/farm-data/farm-data.page.html
@@ -1,4 +1,5 @@
-<ion-content scrollEvents="true">
+<ion-content scrollEvents="true" [fullscreen]="true">
+  <!-- item-detail -->
   <ion-grid class="item-detail ion-margin-top">
     <ion-item class="ion-margin-bottom">
       <ion-avatar slot="start">
@@ -13,7 +14,6 @@
       <ion-card-content class="ion-no-margin ion-no-padding">
         <ion-row class="desc-wrapper">
           <ion-img [src]="ithItemDetail.image"></ion-img>
-
           <ion-col class="txt-box">
             <h3 class="ion-text-lg">
               <strong>{{ithItemDetail.cultivar}}</strong>
@@ -24,6 +24,98 @@
       </ion-card-content>
     </ion-card>
   </ion-grid>
-</ion-content>
+  <!-- time-line -->
+  <ion-grid class="scroll-container time-line"
+    ><ion-item class="scrollable">
+      <div
+        class="ion-time ion-margin-top slide"
+        *ngFor="let item of ithItemDetail.timeLine"
+        (click)="onItemClickFunc(item, $event)"
+      >
+        <ion-grid class="default-item border border-radius">
+          <ion-icon [name]="item['icon']"></ion-icon>
 
-품종 : 킹스베리
+          <ion-grid>
+            <p class="text-color-primary">{{item['date']}}</p>
+            <p class="text-color-primary">{{item['content']|truncate:[6]}}</p>
+          </ion-grid>
+        </ion-grid>
+      </div>
+    </ion-item>
+  </ion-grid>
+  <!-- desc-box -->
+  <ion-grid class="desc-box">
+    <ion-grid class="afterHarvest">
+      <ion-button (click)="presentAlert()" color="success"
+        ><p>수확 후</p>
+        <ion-icon name="help-circle-outline"></ion-icon>
+      </ion-button>
+      <strong><p>{{ithItemDetail.afterHarvest}}</p></strong></ion-grid
+    >
+    <ion-grid class="brix">
+      <ion-button (click)="presentAlert()" color="success"
+        ><p>당도</p>
+        <ion-icon name="help-circle-outline"></ion-icon>
+      </ion-button>
+      <strong><p>{{ithItemDetail.brix}}</p></strong></ion-grid
+    >
+    <ion-grid class="weight">
+      <ion-button (click)="presentAlert()" color="success"
+        ><p>(개당)무게</p>
+        <ion-icon name="help-circle-outline"></ion-icon>
+      </ion-button>
+      <strong><p>{{ithItemDetail.weight}}</p></strong></ion-grid
+    >
+    <ion-grid class="certi">
+      <ion-button (click)="presentAlert()" color="success"
+        ><p>인증</p>
+        <ion-icon name="help-circle-outline"></ion-icon>
+      </ion-button>
+      <strong><p>{{ithItemDetail.certi}}</p></strong></ion-grid
+    >
+  </ion-grid>
+  <!-- farmer-desc -->
+  <ion-grid class="farmer-desc ion-margin-top ion-margin-bottom">
+    <ion-card class="ion-no-margin">
+      <ion-card-content class="ion-no-margin ion-no-padding">
+        <ion-row class="desc-wrapper">
+          <ion-col class="txt-box">
+            <h3 class="ion-text-lg">
+              <strong>{{ithFarmerDetail.title}}</strong>
+            </h3>
+            <p>{{ithFarmerDetail.description}}</p>
+          </ion-col>
+          <ion-img [src]="ithFarmerDetail.image"></ion-img>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+  </ion-grid>
+  <!-- location -->
+  <ion-grid class="location ion-margin-bottom">
+    <h1 class="text-size-md">{{ithFarmerDetail.location}}</h1>
+
+    <swiper [pagination]="true" class="mySwiper">
+      <ng-template swiperSlide
+        ><ion-grid class="img-wrapper">
+          <ion-img
+            [src]="ithFarmerDetail.farmImg"
+          ></ion-img> </ion-grid></ng-template
+      ><ng-template swiperSlide
+        ><ion-grid class="img-wrapper">
+          <ion-img [src]="ithFarmerDetail.farmImg"></ion-img> </ion-grid
+      ></ng-template>
+    </swiper>
+
+    <ion-grid class="text-size-sm"> {{ithFarmerDetail.locationDesc}} </ion-grid>
+  </ion-grid>
+  <!-- reviews -->
+  <ion-grid class="reviews">
+    <ion-text color="danger">구매자 리뷰</ion-text>
+    <ion-col>
+      <ion-row> <ion-icon size="large" name="alert"></ion-icon> </ion-row
+      ><ion-row>페이지 준비중입니다...</ion-row>
+    </ion-col>
+  </ion-grid>
+
+  <app-footer></app-footer>
+</ion-content>
