--- a/trial01/my-farm-01/src/app/components/search-bar-simple/search-bar-simple.component.html
+++ b/trial01/my-farm-01/src/app/components/search-bar-simple/search-bar-simple.component.html
@@ -5,7 +5,10 @@
     <ion-col size="12">
       <ion-list lines="none" class="ion-padding-list">
         <ion-list-header class="ion-no-padding">
-          <ion-searchbar class="ion-no-padding"></ion-searchbar>
+          <ion-searchbar
+            placeholder="힘이 되는 리뷰!"
+            class="ion-no-padding"
+          ></ion-searchbar>
         </ion-list-header>
       </ion-list>
     </ion-col>
