--- a/trial01/my-farm-01/src/theme/variables.scss
+++ b/trial01/my-farm-01/src/theme/variables.scss
@@ -10,6 +10,11 @@
 
 //////////////////////////////////////////////////
 :root {
+  /* Settings Default Font
+    =======================================================
+    =======================================================*/
+  // --ion-font-family: "Nanum Gothic";
+
   /* Settings Fonts Size And Icon Size
     =======================================================
     =======================================================*/
@@ -99,6 +104,7 @@
 /* INCLUDE FONTS
 =======================================================
 =======================================================*/
+@import url("https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Gamja+Flower&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap");
 
 /* INCLUDE RTL MODE
 =======================================================
