done: shared module(components.module), erased all declaration of components and replaced with shared module with neccessary imports and pipes included next: try angular github pg

--- a/trial01/my-farm-01/src/app/pages/review-search/review-search.page.html
+++ b/trial01/my-farm-01/src/app/pages/review-search/review-search.page.html
@@ -1,7 +1,7 @@
 <ion-header #header class="green">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-back-button defaultHref="/" text=""></ion-back-button>
     </ion-buttons>
     <ion-title class="ion-text-capitalize">리뷰 관리</ion-title>
   </ion-toolbar>
