--- a/trial01/my-farm-01/src/app/pages/neighbor-farm-detail/neighbor-farm-detail.page.html
+++ b/trial01/my-farm-01/src/app/pages/neighbor-farm-detail/neighbor-farm-detail.page.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <!-- Content -->
-<ion-content [fullscreen]="true" scrollEvents="true" class="green">
+<ion-content [fullscreen]="true" class="green">
   <app-farm-data
     scrollEvents="true"
     [appHideHeader]="header"
