done: Header; inserted inside ion-content as mobile browser bug

--- a/trial01/my-farm-01/src/app/pages/neighbor-farm-detail/neighbor-farm-detail.page.html
+++ b/trial01/my-farm-01/src/app/pages/neighbor-farm-detail/neighbor-farm-detail.page.html
@@ -1,12 +1,13 @@
-<ion-header #header>
-  <app-fake-tab
-    [tabInput]="tabInput"
-    (tabChange)="tabChange($event)"
-  ></app-fake-tab>
-</ion-header>
-
 <!-- Content -->
 <ion-content [fullscreen]="true" class="green">
+  <!-- Header; inserted inside ion-content as mobile browser bug -->
+  <ion-header #header>
+    <app-fake-tab
+      [tabInput]="tabInput"
+      (tabChange)="tabChange($event)"
+    ></app-fake-tab>
+  </ion-header>
+
   <app-farm-data
     scrollEvents="true"
     [appHideHeader]="header"
