--- a/trial01/my-farm-01/src/app/pages/home/home.page.html
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.html
@@ -1,12 +1,12 @@
-<!-- Header -->
-<ion-header #header>
-  <app-fake-tab
-    [tabInput]="tabInput"
-    (tabChange)="tabChange($event)"
-  ></app-fake-tab>
-</ion-header>
 <!-- Content -->
 <ion-content [fullscreen]="true" class="green">
+  <!-- Header; inserted inside ion-content as mobile browser bug -->
+  <ion-header #header>
+    <app-fake-tab
+      [tabInput]="tabInput"
+      (tabChange)="tabChange($event)"
+    ></app-fake-tab>
+  </ion-header>
   <app-default-home
     [appHideHeader]="header"
     *ngIf="(currentTab | async) === 'default-home' || initialTab"
