--- a/trial01/my-farm-01/src/app/pages/review-detail/review-detail.page.html
+++ b/trial01/my-farm-01/src/app/pages/review-detail/review-detail.page.html
@@ -1,13 +1,14 @@
-<ion-header class="green">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title class="ion-text-capitalize">리뷰 상세</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
+  <!-- Header; inserted inside ion-content as mobile browser bug -->
+  <ion-header class="green">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button defaultHref="/"></ion-back-button>
+      </ion-buttons>
+      <ion-title class="ion-text-capitalize">리뷰 상세</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   {{itemId}}
   <!-- <app-search-bar-simple></app-search-bar-simple> -->
 </ion-content>
