--- a/trial01/my-farm-01/src/app/components/my-farm-in/my-farm-in.component.scss
+++ b/trial01/my-farm-01/src/app/components/my-farm-in/my-farm-in.component.scss
@@ -27,35 +27,11 @@ ion-content {
       align-content: center;
       justify-content: center;
       align-items: center;
-      ion-img {
+      img {
+        margin-top: 10px;
         width: 20vw;
         height: 20vw;
-      }
-      form {
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-        .input-box {
-          width: 100%;
-          display: flex;
-          align-content: center;
-          justify-content: space-between;
-          align-items: center;
-          input {
-            border-radius: none;
-            border: none;
-            background: none;
-            width: 80%;
-            border: 1px solid rgba(131, 129, 129, 0.322);
-            padding: 3px;
-            background-color: rgba(248, 245, 245, 0.918);
-            box-shadow: -1px 1px 2px rgba(136, 127, 127, 0.336);
-          }
-        }
+        border-radius: 50%;
       }
     }
     .join-wrapper {
