--- a/trial01/my-farm-01/src/app/components/register/register.component.scss
+++ b/trial01/my-farm-01/src/app/components/register/register.component.scss
@@ -18,7 +18,7 @@ ion-content {
       width: 90vw;
       border: 1px solid #ccc;
       box-shadow: -1px 1px 2px rgba(136, 127, 127, 0.336);
-      margin: 10vh 0;
+      margin: 5vh 0;
     }
 
     .login-wrapper {
@@ -28,9 +28,11 @@ ion-content {
       align-content: center;
       justify-content: center;
       align-items: center;
-      ion-img {
+      img {
+        margin-top: 10px;
         width: 20vw;
         height: 20vw;
+        border-radius: 50%;
       }
       form {
         width: 90%;
