--- a/trial01/my-farm-01/src/app/pages/farm-of-month/farm-of-month.page.html
+++ b/trial01/my-farm-01/src/app/pages/farm-of-month/farm-of-month.page.html
@@ -37,7 +37,7 @@
         <div class="row gx-5">
           <div class="col-md-6 mb-4">
             <div class="bg-image hover-overlay ripple shadow-2-strong rounded-5" data-mdb-ripple-color="light">
-              <img src="../../assets/magazine/sweet_vasil.png" class="img-fluid mx-auto d-block" />
+              <img src="/assets/magazine/sweet_vasil.png" class="img-fluid mx-auto d-block" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
@@ -64,7 +64,7 @@
         </div>
         <!-- Featured image -->
         <div class="bg-image hover-overlay shadow-1-strong ripple rounded-5 mb-4" data-mdb-ripple-color="light">
-          <img src="../../assets/magazine/time_line.png" class="img-fluid mx-auto d-block" />
+          <img src="/assets/magazine/time_line.png" class="img-fluid mx-auto d-block" />
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -102,7 +102,7 @@
         </div>
         <!-- Featured image -->
         <div class="bg-image hover-overlay shadow-1-strong ripple rounded-5 mb-4" data-mdb-ripple-color="light">
-          <img src="../../assets/magazine/cook-vasil.png" class="img-fluid mx-auto d-block" />
+          <img src="/assets/magazine/cook-vasil.png" class="img-fluid mx-auto d-block" />
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
