--- a/trial01/my-farm-trial02/src/app/pages/seed/seed.page.html
+++ b/trial01/my-farm-trial02/src/app/pages/seed/seed.page.html
@@ -5,5 +5,18 @@
 </ion-header>
 
 <ion-content>
-
-</ion-content>
+  <ion-list-header>유정님,</ion-list-header>
+  <ion-list-header>오늘은 어떤 씨앗을 심어볼까요?</ion-list-header>
+  <app-search-bar-simple></app-search-bar-simple>
+  <ion-chip outline color="primary">
+    <ion-label>모든</ion-label>
+  </ion-chip>
+  <ion-chip outline color="success">
+    <ion-label>새로 들어온</ion-label>
+  </ion-chip>
+  <ion-chip outline color="warning">
+    <ion-label>새로 들어온</ion-label>
+  </ion-chip>
+  <ion-chip outline color="danger">
+    <ion-label>새로 들어온</ion-label>
+  </ion-chip>
