done: pile seed circles next: improve `for statement` for only checking nearby to right/ cutoff overflow

--- a/trial01/my-farm-trial02/src/app/pages/seed/seed.page.scss
+++ b/trial01/my-farm-trial02/src/app/pages/seed/seed.page.scss
@@ -14,8 +14,7 @@ ion-content {
 .ball {
   position: absolute;
   background-color: #91e600;
-  width: 30vh;
-  height: 30vh;
   border-radius: 50%;
   will-change: transform;
+  text-align: center;
 }
