--- a/trial01/my-farm-trial02/src/app/pages/seed/seed.page.scss
+++ b/trial01/my-farm-trial02/src/app/pages/seed/seed.page.scss
@@ -6,15 +6,16 @@ ion-content {
   width: 120vw;
   position: absolute;
   bottom: 0;
-  left: -10vw;
+  left: -15vw;
   overflow: hidden;
 }
 
 
 .ball {
   position: absolute;
-  background-color: #91e600;
+  background-size: cover;
   border-radius: 50%;
   will-change: transform;
   text-align: center;
+  border: 10px solid #def1dd;
 }
