done: seed page z index fixed by aligning stacking context to absolute

--- a/trial01/my-farm-trial02/src/app/home/home.page.html
+++ b/trial01/my-farm-trial02/src/app/home/home.page.html
@@ -19,7 +19,7 @@
     <ion-text color="primary">
       <h1>{{imgLoadingService.imagesLoading$ | async}}</h1>
     </ion-text>
-    <img src="../../assets/images/contents/farmer/farmer01.jpg" alt="farmerImg" appImgLoading>
-    <img src="../../assets/images/contents/farmer/farmer01.jpg" alt="farmerImg" appImgLoading>
+    <img src="../../assets/images/contents/farmer/farmer01.jpg" alt="farmerImg">
+    <img src="../../assets/images/contents/farmer/farmer01.jpg" alt="farmerImg">
   </div>
 </ion-content>
