--- a/trial01/my-farm-trial02/src/app/pages/seed/seed.page.scss
+++ b/trial01/my-farm-trial02/src/app/pages/seed/seed.page.scss
@@ -3,9 +3,11 @@
 ion-content {
   position: relative;
   .non-coverable {
+    width: 100vw;
     position: absolute;
     z-index: 9;
     background-color: #fff;
+
   }
 }
 #featureBackground {
