--- a/trial01/my-farm-trial02/src/app/home/home.page.html
+++ b/trial01/my-farm-trial02/src/app/home/home.page.html
@@ -1,9 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>홈</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
