--- a/trial01/my-farm-trial02/src/app/pages/seed/seed.page.html
+++ b/trial01/my-farm-trial02/src/app/pages/seed/seed.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>seed</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/" text=""></ion-back-button>
+    </ion-buttons>
+    <ion-title>마이씨앗</ion-title>
   </ion-toolbar>
 </ion-header>
 
